# Chipset

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Chipset.ioc  CubeFix.py  PiSubmarine.Chipset.launch  STM32U031xx_FLASH.ld  STM32U031xx_RAM.ld
Core/App/PiSubmarine/Chipset/: AppMain.cpp  AppMain.h  I2CDriver.h
Core/Inc/: FreeRTOSConfig.h  app_freertos.h  i2c.h  lptim.h  main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h
Core/Src/: adc.c  app_freertos.c  dma.c  gpio.c  i2c.c  lptim.c  main.c  rtc.c  stm32u0xx_hal_msp.c  stm32u0xx_hal_timebase_tim.c  stm32u0xx_it.c  usart.c
app/: CMakeLists.txt
app/PiSubmarine/Chipset/: AppMain.cpp  AppMain.h  AtomicStorage.h  CriticalSection.cpp  CriticalSection.h  Heap.cpp  RegisterStorage.cpp  RegisterStorage.h  SharedState.cpp  SharedState.h
app/PiSubmarine/Chipset/Tasks/: Adc.cpp  Adc.h  HostProtocol.cpp  HostProtocol.h  Power.cpp  Power.h  Task.cpp  Task.h
app/PiSubmarine/Chipset/Units/: MicroAmpereHours.h  MicroAmperes.h  MicroKelvins.h  MicroVolts.h
app/PiSubmarine/I2C/Stm32/: Driver.cpp  Driver.h
